--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,7 +17,7 @@
       ng-keyup      = "$event.keyCode == 27 ? change_selection(null) : ''">
 
     <div class = "page-header">
-        <i class = "fa fa-wifi"></i> Choose a Wifi Ap
+        Select Wifi Network
         <a href = "#" ng-click = "rescan()" ng-class = "{ 'active': scan_running }">
             <i class = "fa fa-refresh"
                ng-class = "{ 'fa-spin': scan_running }"></i>
@@ -31,7 +31,7 @@
                  ng-repeat = "cell in scan_results | orderBy:orderScanResults:true"
                  ng-class = "{ selected: (cell.address == selected_cell.address) }"
                  ng-click = "change_selection(cell)">
-                <div class = "secure" ng-if = "cell.encrypted"><i class = "fa fa-key"></i></div>
+                <div class = "secure" ng-if = "cell.encrypted"><i class = "fa fa-wifi"></i></div>
                 <div class = "ssid">{{ cell.ssid }}</div>
                 <div class = "signal_stength">{{ cell.signal_strength }}</div>
             </div>
